--- a/market/products_app/templates/products.html
+++ b/market/products_app/templates/products.html
@@ -1,10 +1,219 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>hello</h1>
-</body>
-</html>
+{% extends 'base/Base.html' %}
+{% load static %}
+{% load render_partial %}
+
+{% block contents %}
+
+<section class="inner-page" id="products-page">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="content">
+                    <div class="row">
+                        <div class="col-12 col-lg-3 px-3 px-lg-0">
+                            <!-- Side Panel -->
+                            <div class="accordion filters-container">
+                            {% render_partial 'products_app:products_categories_partial' %}
+
+                            </div>
+
+
+                            <div class="accordion filters-container mt-3">
+                                <div class="accordion-item">
+                                    <div id="collapseThree" class="accordion-collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body pb-2">
+                                            <div class="form-group">
+                                                <form method="get">
+                                                    {% csrf_token %}
+                                                    <input class="form-check-input" type="checkbox" name="discounted" id="discounted"
+                                                {% if in_stock_checked %}checked{% endif %} onchange="this.form.submit()">
+                                                </form>
+                                                                                  <label for="only-available">فقط کالاهای موجود</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion filters-container mt-3">
+                                <div class="accordion-item">
+                                    <div id="collapseFour" class="accordion-collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body pb-2">
+                                            <div class="form-group">
+                                                <input type="checkbox" id="only-warranty">
+                                                <label for="only-warranty">فقط کالاهای دارای گارانتی</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion filters-container mt-3">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingFive">
+                                        <button class="accordion-button py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                                            جدیدترین محصولات
+                                        </button>
+                                    </h2>
+                                    <div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <div class="row">
+                                                <!-- Side Product -->
+                                                {% for new in newest_products %}
+                                                <div class="col-12 col-md-4 col-lg-12 px-0 mt-2">
+                                                    <a href="product.html">
+                                                        <div class="side-product">
+                                                            <div class="row pl-3">
+                                                                <div class="col-3 pl-2">
+                                                                    <div class="image" style="background-image: url('{{new.images.first.image.url}}')"></div>
+                                                                </div>
+                                                                <div class="col-9 pr-0">
+                                                                    <h2>{{new.name}}</h2>
+                                                                    <div class="row">
+                                                                        <div class="col-7 pl-0">
+                                                                            <span class="encode4365gbf265g43d">{{new.price}} $</span>
+                                                                        </div>
+
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+
+
+                                                {% endfor %}
+
+
+                                                <!-- Side Product -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /Side Panel -->
+                        </div>
+                        <div class="col-12 col-lg-9 px-0 pl-lg-0 pr-lg-2 mt-2 mt-lg-0">
+                            <!-- Filters -->
+                            <div id="order-filters">
+                                <div class="container">
+                                    <div class="row">
+
+                                        <div class="col-12 col-sm-10 my-1">
+                                            <p class="d-block d-sm-inline-block">مرتب سازی بر اساس:</p>
+                                            {% if sort_option == 'newest' %}Newest{% endif %}
+                                            {% if sort_option == 'cheapest' %}Cheapest{% endif %}
+                                            {% if sort_option == 'most_expensive' %}Most Expensive{% endif %}
+                                            {% if sort_option == 'most_popular' %}Most Popular{% endif %}
+                                            <a class="order-filter d-block d-sm-inline-block" href="?sort=newest">Newest</a>
+                                            <a class="order-filter d-block d-sm-inline-block" href="?sort=cheapest">Cheapest</a>
+                                            <a class="order-filter d-block d-sm-inline-block" href="?sort=most_expensive">Most Expensive</a>
+                                            <a class="order-filter d-block d-sm-inline-block" href="?sort=popular">Most Popular</a>
+                                        </div>
+                                        <div class="col-12 col-sm-2 pt-1 text-end">
+                                            <span>
+                                                <a href="products-list.html" class="products-view-type"><svg class="svg-inline--fa fa-th-list fa-w-16" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="th-list" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M149.333 216v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-80c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zM125.333 32H24C10.745 32 0 42.745 0 56v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24zm80 448H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm-24-424v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24zm24 264H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24z"></path></svg><!-- <i class="fa fa-th-list"></i> Font Awesome fontawesome.com --></a>
+                                                <a href="products.html" class="products-view-type active"><svg class="svg-inline--fa fa-th fa-w-16" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="th" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"></path></svg><!-- <i class="fa fa-th"></i> Font Awesome fontawesome.com --></a>
+                                            </span>
+                                            &nbsp;|&nbsp;
+                                            <span>122 کالا</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /Filters -->
+                            <div class="mt-2" id="pager">
+                                <div class="container">
+                                    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 gx-md-4">
+                                        <!-- Products -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                        {% for product in products %}
+
+                                        <div class="col" style="display: block;">
+                                            <!-- Product Box -->
+                                            <div class="encode4326654321vfb">
+                                                <a href="product.html"><div class="image" style="background-image: url('{{product.images.first.image.url}}')"></div></a>
+                                                <div class="details p-3">
+                                                    <div class="category">
+                                                        <a href="products.html">{{product.name}} </a>
+                                                        &nbsp;/&nbsp;
+                                                        <a href="products.html">{{product.category}</a>
+                                                    </div>
+                                                    <a href="product.html"><h2>{{product.short_description}}</h2></a>
+                                                    <div class="encode4365gbf265g43d">{{product.price}} $</div>
+                                                    <div class="" style="color:red;"> %{{product.get_savings_percentage}}<span> off</span></div>
+                                                    <div class="" style="color:red;">{{product.get_savings}}<span> $ </span></div>
+<!--                                                    <div class="rate">-->
+<!--                                                        <p></p>-->
+<!--                                                        <svg class="svg-inline&#45;&#45;fa fa-star-half-alt fa-w-17" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="star-half-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 536 512" data-fa-i2svg=""><path fill="currentColor" d="M508.55 171.51L362.18 150.2 296.77 17.81C290.89 5.98 279.42 0 267.95 0c-11.4 0-22.79 5.9-28.69 17.81l-65.43 132.38-146.38 21.29c-26.25 3.8-36.77 36.09-17.74 54.59l105.89 103-25.06 145.48C86.98 495.33 103.57 512 122.15 512c4.93 0 10-1.17 14.87-3.75l130.95-68.68 130.94 68.7c4.86 2.55 9.92 3.71 14.83 3.71 18.6 0 35.22-16.61 31.66-37.4l-25.03-145.49 105.91-102.98c19.04-18.5 8.52-50.8-17.73-54.6zm-121.74 123.2l-18.12 17.62 4.28 24.88 19.52 113.45-102.13-53.59-22.38-11.74.03-317.19 51.03 103.29 11.18 22.63 25.01 3.64 114.23 16.63-82.65 80.38z"></path></svg>&lt;!&ndash; <i class="fa fa-star-half-alt"></i> Font Awesome fontawesome.com &ndash;&gt;-->
+<!--                                                        <svg class="svg-inline&#45;&#45;fa fa-star fa-w-18" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="star" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"></path></svg>&lt;!&ndash; <i class="fa fa-star"></i> Font Awesome fontawesome.com &ndash;&gt;-->
+<!--                                                        <span class="encode43bf265g43d">(14 رای دهنده)</span>-->
+<!--                                                    </div>-->
+                                                    <div class="rate">
+                                                        <p></p>
+                                                        {{product.rating}}
+                                                        <svg class="svg-inline--fa fa-star fa-w-18" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="star" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"></path></svg><!-- <i class="fa fa-star"></i> Font Awesome fontawesome.com -->
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- /Product Box -->
+                                        </div>
+
+
+
+                {% empty %}
+                <div class="col-12">
+                    <div class="alert alert-info">No products found.</div>
+                </div>
+                {% endfor %}
+
+
+
+
+
+
+
+
+
+
+
+                                        <!-- /Products -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div id="pagination-bg">
+                                            <ul class="pagination justify-content-center pagination-sm"><li class="page-item" id="previous-page"><a class="page-link" href="javascript:void(0)"><svg class="svg-inline--fa fa-angle-double-right fa-w-14" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-double-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"></path></svg><!-- <i class="fas fa-angle-double-right"></i> Font Awesome fontawesome.com --></a></li><li class="page-item current-page active"><a class="page-link" href="javascript:void(0)">1</a></li><li class="page-item current-page"><a class="page-link" href="javascript:void(0)">2</a></li><li class="page-item current-page"><a class="page-link" href="javascript:void(0)">3</a></li><li class="page-item current-page"><a class="page-link" href="javascript:void(0)">4</a></li><li class="page-item" id="next-page"><a class="page-link" href="javascript:void(0)"><svg class="svg-inline--fa fa-angle-double-left fa-w-14" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-double-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"></path></svg><!-- <i class="fas fa-angle-double-left"></i> Font Awesome fontawesome.com --></a></li></ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
